fix layout on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,6 +11,7 @@ h1, h2, h3 {
 }
 
 h2 {
+  font-size: 2.8rem;
   margin: 0;
 }
 
