--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,8 +1,18 @@
 .tm-splash {
   width: 100%;
-  height: 40vh;
+  height: 20vh;
   flex-shrink: 0;
   position: relative;
+
+  .tm-hero {
+    position: absolute;
+    z-index: 3;
+
+    display: flex;
+    align-items: center;
+    height: 80%;
+    width: 100%;
+  }
 
   &:before,
   &:after {
@@ -26,7 +36,8 @@
 }
 
 .tm-main {
-  margin-top: -35vh;
+  margin-top: -10vh;
+  margin-bottom: 80px;
   flex-shrink: 0;
 }
 
@@ -45,23 +56,15 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .tm-content {
+    padding: 40px 28px;
+  }
 
-.mdl-layout {
-  &.is-small-screen {
-    .tm-content {
-      padding: 40px 28px;
-    }
-
-    h2 {
-      font-size: 1.6rem;
-      line-height: 1.3;
-      font-weight: 300;
-    }
-
-    .tm-hero {
-      padding: 0;
-      margin-bottom: 0;
-    }
+  h2 {
+    font-size: 1.8rem;
+    line-height: 1.3;
+    font-weight: 300;
   }
 }
 
@@ -78,8 +81,8 @@
 
 .tm-content {
   border-radius: 2px;
-  padding: 80px 56px;
-  margin-bottom: 80px;
+  padding: 60px;
+  margin-bottom: 60px;
 
   h3 {
     margin-top: 48px;
